--- a/src/index.css
+++ b/src/index.css
@@ -280,3 +280,101 @@ TAKEN FROM CODEPEN: https://codepen.io/Founts/pen/AJyVOr
     -webkit-margin-after: 0em;
 }
 
+.next-buttons{
+    background: #291509;
+    border: 5px solid #291509;
+    color: #ffffff;
+    border-radius: 10px;
+}
+
+.next-buttons.left{
+    margin-right:10px;
+}
+
+.bubble-one{
+    left: 40px;
+    bottom: 160px;
+}
+
+.bubble-two{
+    left: 550px;
+    bottom: 180px;
+}
+
+.bubble-three{
+    position: fixed;
+    top: 5px;
+    right: 100px;
+
+}
+
+.bubble-four{
+    right: 120px;
+    bottom: 160px;
+}
+
+.bubble-five{
+    left: 40px;
+    bottom: 160px;
+}
+
+@media(max-width:425px){
+    .bubble-two{
+        left:40px;
+        bottom: 160px;
+    }
+    .bubble-three{
+        left: 40px;
+        bottom: 160px;
+        position: absolute !important;
+        top: auto;
+    }
+    .bubble-four{
+        left: 40px;
+        bottom: 160px;
+    }
+    .bubble-five{
+        left: 40px;
+        bottom: 160px;
+    }
+}
+.help{
+    height: 50px;
+    width: 50px;
+    background: #537D38;
+    color: #fff;
+    font-size: 25px;
+    font-weight:bold;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+    cursor: pointer;
+    margin:15px;
+    border: 5px solid #537D38;
+}
+
+.close {
+    position: absolute;
+    right: 32px;
+    top: 32px;
+    width: 32px;
+    height: 32px;
+    opacity: 0.7;
+}
+.close:hover {
+    opacity: 1;
+}
+.close:before, .close:after {
+    position: absolute;
+    left: 15px;
+    content: ' ';
+    height: 33px;
+    width: 2px;
+    background-color: #333;
+}
+.close:before {
+    transform: rotate(45deg);
+}
+.close:after {
+    transform: rotate(-45deg);
+}
